# abbrv

./: README.md  app.py  char_splines.json  download_from_gist.py  drafter.html  help.html  index.html  pyproject.toml  rules.html  setup.py  validation_output.txt  writer.html
.github/: config.yaml
.github/ISSUE_TEMPLATE/: example.yml  submit_upload.yml  system-upload.md  system-upload.yaml  upload-new-system.md
.github/scripts/: validate_json.py
.github/workflows/: comment-instructions.yml  submit-upload.yml  validate-system-upload.yml
data/: characters.json  joins.json  multi_char_splines.json  single_char_splines.json
scripts/: export_font.py  generate_pdf.py
static/: drafter_styles.css  styles.css
static/css/: styles.css
static/data/: characters.json  characters_dots.json  glyphs.json  joins.json  joins_dots.json  modes.json  phrases.json  rules.json  words.json
static/data/systems/: available_systems.json  glyphs.json
static/data/systems/dance/: glyphs.json  meta.json  rules.json
static/data/systems/flow/: glyphs.json  meta.json  modes.json  rules.json
static/data/systems/orthic/: glyphs.json  meta.json  modes.json  phrases.json  rules.json
static/js/: drafter-scripts.js  help-scripts.js  index-scripts.js  rendering.js  rules-scripts.js  text_to_splines.js  writer-scripts.js
static/py/: convert_to_opentype.py  debug.py  preview_glyphs.py
templates/: drafter.html  help.html  index.html  rules.html  writer.html
tests/: test_export_font.py  test_spline_parity.py
