[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abbrv"
version = "0.1.0"
description = "A framework for designing and using shorthand writing systems"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask>=3.1.0",
    "numpy>=2.0.2",
    "scipy>=1.13.1",
    "matplotlib>=3.9.2",
]

[project.optional-dependencies]
font = ["fonttools>=4.43.0"]
dev = ["pytest", "flake8"]

[project.scripts]
generate-pdf = "scripts.generate_pdf:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
